==> hieplchan/ROV_STM32F4/Src/hmc5883L_hal.c <==
#include "hmc5883L_hal.h"

void HMC5883L_I2C_ByteWrite(u8 slaveAddr, u8* pBuffer, u8 WriteAddr)
{
//  ENTR_CRT_SECTION();

  /* Send START condition */
  I2C_GenerateSTART(HMC5883L_I2C, ENABLE);

  /* Test on EV5 and clear it */
  while(!I2C_CheckEvent(HMC5883L_I2C, I2C_EVENT_MASTER_MODE_SELECT));

  /* Send HMC5883 address for write */
  I2C_Send7bitAddress(HMC5883L_I2C, slaveAddr, I2C_Direction_Transmitter);

  /* Test on EV6 and clear it */
  while(!I2C_CheckEvent(HMC5883L_I2C, I2C_EVENT_MASTER_TRANSMITTER_MODE_SELECTED));

  /* Send the HMC5883L internal address to write to */
  I2C_SendData(HMC5883L_I2C, WriteAddr);

  /* Test on EV8 and clear it */
  while(!I2C_CheckEvent(HMC5883L_I2C, I2C_EVENT_MASTER_BYTE_TRANSMITTED));

  /* Send the byte to be written */
  I2C_SendData(HMC5883L_I2C, *pBuffer);

  /* Test on EV8 and clear it */
  while(!I2C_CheckEvent(HMC5883L_I2C, I2C_EVENT_MASTER_BYTE_TRANSMITTED));

  /* Send STOP condition */
  I2C_GenerateSTOP(HMC5883L_I2C, ENABLE);
 // EXT_CRT_SECTION();

}

void HMC5883L_I2C_BufferRead(u8 slaveAddr, u8* pBuffer, u8 ReadAddr, u16 NumByteToRead)
{
 // ENTR_CRT_SECTION();

  /* While the bus is busy */
  while(I2C_GetFlagStatus(HMC5883L_I2C, I2C_FLAG_BUSY));

  /* Send START condition */
  I2C_GenerateSTART(HMC5883L_I2C, ENABLE);

  /* Test on EV5 and clear it */
  while(!I2C_CheckEvent(HMC5883L_I2C, I2C_EVENT_MASTER_MODE_SELECT));

  /* Send HMC5883L_Magn address for write */ // Send HMC5883L address for write 
  I2C_Send7bitAddress(HMC5883L_I2C, slaveAddr, I2C_Direction_Transmitter);

  /* Test on EV6 and clear it */
  while(!I2C_CheckEvent(HMC5883L_I2C, I2C_EVENT_MASTER_TRANSMITTER_MODE_SELECTED));

  /* Clear EV6 by setting again the PE bit */
  I2C_Cmd(HMC5883L_I2C, ENABLE);

  /* Send the HMC5883L's internal address to write to */
  I2C_SendData(HMC5883L_I2C, ReadAddr);

  /* Test on EV8 and clear it */
  while(!I2C_CheckEvent(HMC5883L_I2C, I2C_EVENT_MASTER_BYTE_TRANSMITTED));

  /* Send STRAT condition a second time */
  I2C_GenerateSTART(HMC5883L_I2C, ENABLE);

  /* Test on EV5 and clear it */
  while(!I2C_CheckEvent(HMC5883L_I2C, I2C_EVENT_MASTER_MODE_SELECT));

  /* Send HMC5883L address for read */
  I2C_Send7bitAddress(HMC5883L_I2C, slaveAddr, I2C_Direction_Receiver);

  /* Test on EV6 and clear it */
  while(!I2C_CheckEvent(HMC5883L_I2C, I2C_EVENT_MASTER_RECEIVER_MODE_SELECTED));

  /* While there is data to be read */
  while(NumByteToRead)
  {
    if(NumByteToRead == 1)
    {
      /* Disable Acknowledgement */
      I2C_AcknowledgeConfig(HMC5883L_I2C, DISABLE);

      /* Send STOP Condition */
      I2C_GenerateSTOP(HMC5883L_I2C, ENABLE);
    }

    /* Test on EV7 and clear it */
    if(I2C_CheckEvent(HMC5883L_I2C, I2C_EVENT_MASTER_BYTE_RECEIVED))
    {
      /* Read a byte from the HMC5883L */
      *pBuffer = I2C_ReceiveData(HMC5883L_I2C);

      /* Point to the next location where the byte read will be saved */
      pBuffer++;

      /* Decrement the read bytes counter */
      NumByteToRead--;
    }
  }

  /* Enable Acknowledgement to be ready for another reception */
  I2C_AcknowledgeConfig(HMC5883L_I2C, ENABLE);
//  EXT_CRT_SECTION();

}
